# apps/server/docs/swagger.json
@@ -1454,6 +1454,9 @@
                     },
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -1501,6 +1504,13 @@
                         "description": "Comma-separated list of tag IDs to filter by",
                         "name": "tag_ids",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "X-Organization-ID",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1512,6 +1522,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/utils.APIError"
                         }
@@ -1537,6 +1553,9 @@
                     },
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "consumes": [
@@ -1635,6 +1654,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -1684,6 +1706,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "consumes": [
@@ -1745,6 +1770,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -1794,6 +1822,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "consumes": [
@@ -1857,6 +1888,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -1932,6 +1966,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -1983,6 +2020,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -2053,6 +2093,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -2104,6 +2147,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -2551,6 +2597,9 @@
                     },
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "consumes": [
@@ -2610,6 +2659,9 @@
                     },
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "OrgIdAuth": []
                     }
                 ],
                 "produces": [
@@ -6282,6 +6334,12 @@
             "description": "JWT token authentication (Bearer token format)",
             "type": "apiKey",
             "name": "Authorization",
+            "in": "header"
+        },
+        "OrgIdAuth": {
+            "description": "Organization ID authentication (header format)",
+            "type": "apiKey",
+            "name": "X-Organization-ID",
             "in": "header"
         }
     }
